Updating URL for future Java 25